fixed punctuation with wrong font

--- a/tuntext.css
+++ b/tuntext.css
@@ -61,6 +61,10 @@
   background-color: #FAFAFA;
   border: 1px solid #CCC;
   border-radius: 5px;
+  line-height: 1.5em;
+  font-family: verdana;
+  font-size: 16px;
+  color: #000;
 }
 
 #tuntext_content a {
